icons section added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
         <div class="nav-left">
           <img src="./images/Frame.png" alt="" />
-          <h2 class="nav-title"><span class="nav-letter">G</span>amer</h2>
+          <h2 class="nav-title"><span class="pink-letter">G</span>amer</h2>
         </div>
         <div class="nav-right">
           <div><a href="">About Us</a></div>
@@ -30,22 +30,127 @@
         </div>
       </nav>
       <!-- banner section start -->
-      <!-- <section class="banner-container">
+      <section class="banner-container">
         <div class="banner-left">
           <h5 class="banner-title">PLAy LIKE THE</h5>
           <h1 class="banner-title-letter">G.O.A.T.</h1>
-          <p>1-Click instant play</p>
-          <p>No Download</p>
-          <p>1000s of supported online games</p>
+          <p class="gray-light-text">1-Click instant play</p>
+          <p class="gray-light-text">No Download</p>
+          <p class="gray-light-text">1000s of supported online games</p>
           <button class="sign-in-btn">SIGN IN</button>
           <button class="go-btn">GO ROGUE</button>
         </div>
         <div class="banner-right">
-            <img src="./images/Group 18.png" alt="">
+          <img src="./images/Group 18.png" alt="" />
         </div>
-      </section> -->
+      </section>
     </header>
-    <main></main>
-    <footer></footer>
+    <!-- Online games section start -->
+    <main>
+      <section class="online-games-container">
+        <div class="online-games-content">
+          <h1 class="online-games-title">
+            Online Games <span class="pink-letter">Funny Videos</span>
+          </h1>
+          <p class="gray-light-text">
+            A Collection of Hilarious Videos to Brighten Your Day
+          </p>
+        </div>
+        <div class="tectangle-img">
+          <div>
+            <img src="./images/Rectangle 4.png" alt="" />
+            <p class="gray-light-text">
+              No Download. No Installs. <br />
+              Play games Instantly on Gamer.
+            </p>
+          </div>
+          <div>
+            <img src="./images/Rectangle 5.png" alt="" />
+            <p class="gray-light-text">
+              Did you score? <br />
+              #unblockedgames #school
+            </p>
+          </div>
+          <div>
+            <img src="./images/Rectangle 6.png" alt="" />
+            <p class="gray-light-text">Breaking game records like OG</p>
+          </div>
+          <div>
+            <img src="./images/Rectangle 7.png" alt="" />
+            <p class="gray-light-text">
+              Busted gaming on school laptop, <br />
+              but you are still lit.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- play instant section start -->
+      <section class="play-section">
+        <div class="play-content">
+          <h3 class="play-title">
+           <span class="pink-letter"> Play Instantly,</span> <br />
+            No Downloads <br />
+            No Installs.
+          </h3>
+          <p class="gray-light-text">
+            Play games online <br> for free without downloading. <br />
+            Just click the Play button and <br />
+            play instantly in your browser.
+          </p>
+        </div>
+        <div class="overlay">
+          <div >
+            <img src="./images/Rectangle 55.png" alt="" />
+        </div>
+          <img class="corner-img" src="./images/Rectangle 66.png" alt="" />
+        </div>
+      </section>
+    </main>
+    <footer>
+        <!-- icon section start -->
+<section class="icons-section">
+<div class="flex-icon">
+    <img src="./images/Rectangle 11.png" alt="">
+    <p>Action Games</p>
+</div>
+<div class="flex-icon" >
+    <img src="./images/Rectangle 12.png" alt="">
+    <p>Adventure Games</p>
+</div>
+<div class="flex-icon">
+    <img src="./images/Rectangle 13.png" alt="">
+    <p>Arcade Games</p>
+</div>
+<br>
+<div class="flex-icon">
+    <img src="./images/Rectangle 14.png" alt="">
+    <p>Educational Games</p>
+</div>
+<div class="flex-icon">
+    <img src="./images/Rectangle 15.png" alt="">
+    <p>Word Games</p>
+</div>
+<div class="flex-icon">
+    <img src="./images/Rectangle 16.png" alt="">
+    <p>Role Palying Games</p>
+</div>
+
+<div class="flex-icon">
+    <img src="./images/Rectangle 17.png" alt="">
+    <p>Music & Audio Games</p>
+</div>
+<div class="flex-icon">
+    <img src="./images/Rectangle 18.png" alt="">
+    <p>Puzzle Games</p>
+</div>
+<div class="flex-icon">
+    <img src="./images/Rectangle 19.png" alt="">
+    <p>Strategy Games</p>
+</div>
+
+</section>
+
+    </footer>
   </body>
 </html>
