--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
       <nav>
         <div class="nav-left">
           <img src="./images/Frame.png" alt="" />
-          <h2 class="nav-title"><span class="pink-letter">G</span>amer</h2>
+          <h2 class="title"><span class="pink-letter">G</span>amer</h2>
         </div>
         <div class="nav-right">
           <div><a href="">About Us</a></div>
           <div><a href="">Developers</a></div>
           <button class="follow-btn">
             <a href="">Follow us on</a>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-tiktok"></i>
+            <a href="" class="red-a"><i class="fa-brands fa-youtube"></i></a>
+            <a href="" class="red-a"><i class="fa-brands fa-tiktok"></i></a>
           </button>
         </div>
       </nav>
@@ -58,7 +58,7 @@
         </div>
         <div class="tectangle-img">
           <div>
-            <img src="./images/Rectangle 4.png" alt="" />
+            <img class="online-games-img animation" src="./images/Rectangle 4.png" alt="" />
             <p class="gray-light-text">
               No Download. No Installs. <br />
               Play games Instantly on Gamer.
@@ -89,68 +89,97 @@
       <section class="play-section">
         <div class="play-content">
           <h3 class="play-title">
-           <span class="pink-letter"> Play Instantly,</span> <br />
+            <span class="pink-letter"> Play Instantly,</span> <br />
             No Downloads <br />
             No Installs.
           </h3>
           <p class="gray-light-text">
-            Play games online <br> for free without downloading. <br />
+            Play games online <br />
+            for free without downloading. <br />
             Just click the Play button and <br />
             play instantly in your browser.
           </p>
         </div>
         <div class="overlay">
-          <div >
+          <div>
             <img src="./images/Rectangle 55.png" alt="" />
-        </div>
+          </div>
           <img class="corner-img" src="./images/Rectangle 66.png" alt="" />
         </div>
       </section>
+
+       <!-- icon section start -->
+       <section class="icons-section">
+        <div class="flex-icon">
+          <img src="./images/Rectangle 11.png" alt="" />
+          <p class="icons-text">Action Games</p>
+        </div>
+        <div class="flex-icon">
+          <img src="./images/Rectangle 12.png" alt="" />
+          <p class="icons-text">Adventure Games</p>
+        </div>
+        <div class="flex-icon">
+          <img src="./images/Rectangle 13.png" alt="" />
+          <p class="icons-text">Arcade Games</p>
+        </div>
+        <br />
+        <div class="flex-icon">
+          <img src="./images/Rectangle 14.png" alt="" />
+          <p class="icons-text">Educational Games</p>
+        </div>
+        <div class="flex-icon">
+          <img src="./images/Rectangle 15.png" alt="" />
+          <p class="icons-text">Word Games</p>
+        </div>
+        <div class="flex-icon">
+          <img src="./images/Rectangle 16.png" alt="" />
+          <p class="icons-text">Role Palying Games</p>
+        </div>
+
+        <div class="flex-icon">
+          <img src="./images/Rectangle 17.png" alt="" />
+          <p class="icons-text">Music & Audio Games</p>
+        </div>
+        <div class="flex-icon">
+          <img src="./images/Rectangle 18.png" alt="" />
+          <p class="icons-text">Puzzle Games</p>
+        </div>
+        <div class="flex-icon">
+          <img src="./images/Rectangle 19.png" alt="" />
+          <p class="icons-text">Strategy Games</p>
+        </div>
+      </section>
+
     </main>
     <footer>
-        <!-- icon section start -->
-<section class="icons-section">
-<div class="flex-icon">
-    <img src="./images/Rectangle 11.png" alt="">
-    <p>Action Games</p>
-</div>
-<div class="flex-icon" >
-    <img src="./images/Rectangle 12.png" alt="">
-    <p>Adventure Games</p>
-</div>
-<div class="flex-icon">
-    <img src="./images/Rectangle 13.png" alt="">
-    <p>Arcade Games</p>
-</div>
-<br>
-<div class="flex-icon">
-    <img src="./images/Rectangle 14.png" alt="">
-    <p>Educational Games</p>
-</div>
-<div class="flex-icon">
-    <img src="./images/Rectangle 15.png" alt="">
-    <p>Word Games</p>
-</div>
-<div class="flex-icon">
-    <img src="./images/Rectangle 16.png" alt="">
-    <p>Role Palying Games</p>
-</div>
-
-<div class="flex-icon">
-    <img src="./images/Rectangle 17.png" alt="">
-    <p>Music & Audio Games</p>
-</div>
-<div class="flex-icon">
-    <img src="./images/Rectangle 18.png" alt="">
-    <p>Puzzle Games</p>
-</div>
-<div class="flex-icon">
-    <img src="./images/Rectangle 19.png" alt="">
-    <p>Strategy Games</p>
-</div>
-
-</section>
-
+     
+      <!-- footer section start -->
+     <section class="footer-section">
+        <div class="footer">
+            <img src="./images/Frame.png" alt="" />
+            <h3 class="footer-sub-title"><span class="pink-letter">G</span>amer</h3>
+          </div>
+          <div class="footer-content">
+            <a href="">Our story </a>
+            <a href="">Games</a>
+            <a href="">Web Games</a>
+            <a href="">Careers</a>
+            <a href="">Support</a>
+            <a href="">My Account</a>
+          </div>
+          <div class="footer-icons">
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-tiktok"></i>
+            <i class="fa-brands fa-facebook"></i>
+          </div>
+          <div class="gray-light-text footer-a">
+            <a href="">Terms and Conditions</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Cookie Policy</a>
+            <a href="">Privacy Settings</a>
+          </div>
+          <h6 class="gray-light-text">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</h6>
+     </section>
     </footer>
   </body>
 </html>
