overlay image responsive

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="overlay">
           <div>
-            <img src="./images/Rectangle 55.png" alt="" />
+            <img class="overlay-img" src="./images/Rectangle 55.png" alt="" />
           </div>
           <img class="corner-img" src="./images/Rectangle 66.png" alt="" />
         </div>
