footer section responsive

--- a/index.html
+++ b/index.html
@@ -56,9 +56,13 @@
             A Collection of Hilarious Videos to Brighten Your Day
           </p>
         </div>
-        <div class="tectangle-img">
+        <div class="rectangle-img">
           <div>
-            <img class="online-games-img animation" src="./images/Rectangle 4.png" alt="" />
+            <img
+              class="online-games-img animation"
+              src="./images/Rectangle 4.png"
+              alt=""
+            />
             <p class="gray-light-text">
               No Download. No Installs. <br />
               Play games Instantly on Gamer.
@@ -101,15 +105,15 @@
           </p>
         </div>
         <div class="overlay">
-          <div>
+          <div class="overlay-content">
             <img class="overlay-img" src="./images/Rectangle 55.png" alt="" />
           </div>
           <img class="corner-img" src="./images/Rectangle 66.png" alt="" />
         </div>
       </section>
 
-       <!-- icon section start -->
-       <section class="icons-section">
+      <!-- icon section start -->
+      <section class="icons-section">
         <div class="flex-icon">
           <img src="./images/Rectangle 11.png" alt="" />
           <p class="icons-text">Action Games</p>
@@ -149,37 +153,43 @@
           <p class="icons-text">Strategy Games</p>
         </div>
       </section>
-
     </main>
     <footer>
-     
       <!-- footer section start -->
-     <section class="footer-section">
+      <section class="footer-section">
         <div class="footer">
-            <img src="./images/Frame.png" alt="" />
-            <h3 class="footer-sub-title"><span class="pink-letter">G</span>amer</h3>
-          </div>
-          <div class="footer-content">
-            <a href="">Our story </a>
-            <a href="">Games</a>
-            <a href="">Web Games</a>
-            <a href="">Careers</a>
-            <a href="">Support</a>
-            <a href="">My Account</a>
-          </div>
-          <div class="footer-icons">
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-tiktok"></i>
-            <i class="fa-brands fa-facebook"></i>
-          </div>
-          <div class="gray-light-text footer-a">
-            <a href="">Terms and Conditions</a>
-            <a href="">Privacy Policy</a>
-            <a href="">Cookie Policy</a>
-            <a href="">Privacy Settings</a>
-          </div>
-          <h6 class="gray-light-text">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</h6>
-     </section>
+          <img src="./images/Frame.png" alt="" />
+          <h3 class="footer-sub-title">
+            <span class="pink-letter">G</span>amer
+          </h3>
+        </div>
+        <div>
+          <ul class="footer-content">
+            <li><a href="">Our story </a></li>
+            <li><a href="">Games</a></li>
+            <li><a href="">Web Games</a></li>
+            <li><a href="">Careers</a></li>
+            <li>
+              <a href="">Support</a>
+            </li>
+            <li><a href="">My Account</a></li>
+          </ul>
+        </div>
+        <div class="footer-icons">
+          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-tiktok"></i>
+          <i class="fa-brands fa-facebook"></i>
+        </div>
+        <div >
+          <ul class="footer-Sub-content">
+            <li href="">Terms and Conditions</li>
+          <li href="">Privacy Policy</li>
+          <li href="">Cookie Policy</li>
+          <li href="">Privacy Settings</li>
+          </ul>
+        </div>
+        <h6 class="footer-copyright">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</h6>
+      </section>
     </footer>
   </body>
 </html>
